css/style.css
* {
	margin: 0px;
	padding: 0px;
}

#body {
	padding-top: 5%;
	margin: 0px;
	padding: 0;
	background-color: #FFAE5D;
	text-align: center;
}

h1 {
	font-size: 50px;
	color: #6F3662;
	padding-top: 10px;
	margin-bottom: 10px;
}

h3 {
	color: #666;
	font-weight: lighter;
}

#class-container {
	margin-top: 3%;
	margin-left: 5%;
	margin-right: 5%;
	text-align: left;
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	flex: 1;
	align-items: center;
	justify-content: center;
}

.news_items {
	line-height: 20px;
	word-wrap: break-all;
	padding-bottom: 5px;
	background-color: #F8F8F2;
	display: block;
	width: 180px;
	height: auto;
	white-space: nowrap;
	margin-bottom: 30px;
	margin-left: 20px;
	text-overflow: "...";
	border-radius: 5% 5% 0 0;
}

.user_image {
	display: block;
	width: 100%;
	height: 80%;
	border-radius: 5% 5% 0% 0%;
}

a, a:visited {
	text-decoration: none;
	color: #06425C;
}

a:hover {
	text-decoration: underline;
}

.titles {
	padding-left: 4px;
	display: inline-block;
	color: #06425C;
	font-weight: bold;
	font-size: 15px;
	width: 150px;
	whitespace: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
.author {
	padding-left: 4px;
	font-weight: lighter;
	font-size: 15px;
}

.upvotes {
	padding-left: 4px;
	font-weight: lighter;
	font-size: 12px;
}

.posted {
	padding-left: 4px;
	font-weight: lighter;
	font-size: 12px;
}

